--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
-- stable
+  - stable
+before_script:
+  - yarn install
 deploy:
   provider: npm
   email: saphidev@gmail.com
