--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
-  - stable
-before_script:
+  - node
+script:
   - yarn install
+  - yarn test
+  - yarn build
 deploy:
+  skip-cleanup: true
   provider: npm
   email: saphidev@gmail.com
   api_key:
