--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
     "presets": [
-        "@babel/preset-env"
+        ["@babel/preset-env",
+        {
+            "targets": {
+              "node": true
+            }
+        }]
     ],
     "plugins": ["@babel/plugin-transform-runtime"]
 }
