--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "gatsby-source-saphy",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "import products from saphy.net saas",
   "main": "gatsby-node.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "babel src --out-dir ./ --source-maps",
     "prepare": "npm run build",
     "test": "jest"
   },
   "author": "saphidev@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "jest": "^25.1.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.10"
+    "@babel/preset-env": "^7.8.7",
+    "jest": "^25.1.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "node-fetch": "^2.6.0"
   },
   "repository": "https://github.com/apotox/gatsby-source-saphy"
