--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "@babel/runtime": "^7.8.7",
     "node-fetch": "^2.6.0"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
   "repository": "https://github.com/apotox/gatsby-source-saphy"
 }
